[project]
name = "my-first-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastmcp>=3.0.1",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.23",
    "langchain-mcp-adapters>=0.2.2",
    "langchain[openai]>=1.2.14",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mcp[cli]>=1.26.0",
    "psutil>=7.2.2",
]
